--- a/testsystem/templates/testsystem/index.html
+++ b/testsystem/templates/testsystem/index.html
@@ -17,6 +17,60 @@
 
     <link href="{% static 'login/css/animate.css' %}" rel="stylesheet">
     <link href="{% static 'login/css/style.css' %}" rel="stylesheet">
+
+    <style>
+        /* 遮罩层 */
+          #overlay {
+            position: fixed;
+            left: 0px;
+            top: 0px;
+            width: 100%;
+            height: 100%;
+            font-size: 16px;
+              z-index: 100;
+            /* IE9以下不支持rgba模式 */
+            background-color: rgba(0, 0, 0, 0.5);
+            /* 兼容IE8及以下 */
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#7f000000,endColorstr=#7f000000);
+            display: none;
+          }
+          /* 弹出框主体 */
+          .popup {
+            background-color: #ffffff;
+            max-width: 400px;
+            min-width: 200px;
+            height: 300px;
+            border-radius: 5px;
+            margin: 100px auto;
+            text-align: center;
+          }
+          /* 弹出框的标题 */
+          .popup_title {
+            height: 60px;
+            line-height: 60px;
+            border-bottom: solid 1px #cccccc;
+          }
+          /* 弹出框的内容 */
+          .popup_content {
+            height: 50px;
+            line-height: 50px;
+            padding: 15px 20px;
+          }
+          /* 弹出框的按钮栏 */
+          .popup_btn {
+            padding-bottom: 10px;
+          }
+          /* 弹出框的按钮 */
+          .popup_btn button {
+            width: 40%;
+            height: 40px;
+            cursor: pointer;
+            border: solid 1px #cccccc;
+            border-radius: 5px;
+            margin: 5px 10px;
+            background-color: whitesmoke;
+          }
+        </style>
 </head>
 
 <body class="gray-bg">
@@ -103,15 +157,26 @@
                                         </h1>
                                         <br><br><br>
                                         <div class="m-b-sm">
-                                            <img alt="image" class="img-circle" src="{% static 'login/image/student.jpg' %}" id="avatar" style="width: 100px">
+                                            <img alt="image" class="img-circle" src="{% static 'media/student.jpg' %}" id="avatar" style="width: 100px">
                                         </div>
                                     </div>
                                     <div class="col-lg-8">
                                         <h1>
                                             <a>
-                                                <button type="button" class="btn btn-rounded" style="color: dodgerblue;width: 80px" onclick="editInfo()">
+                                                <button type="button" class="btn btn-rounded" style="color: dodgerblue;width: 80px" onclick="showPopup()">
                                                     编辑信息
                                                 </button>
+                                                <div id="overlay">
+                                                    <div class="popup">
+                                                        <p class="popup_title">提示</p>
+                                                        <p class="popup_content">用户无权编辑个人信息！</p>
+                                                        <p class="popup_content">若想继续进行此操作，请联系管理员！</p>
+                                                        <br><br>
+                                                        <div class="popup_btn">
+                                                            <button class="btn btn-rounded" style="color: dodgerblue;width: 80px" onclick="hidePopup()">确认</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </a>
                                             &nbsp
                                             <a>
@@ -206,6 +271,14 @@
                 $("#avatar").attr("src", this.result);
             }
         }
+        function showPopup(){
+            var overlay = document.getElementById("overlay");
+            overlay.style.display = "block";
+        }
+        function hidePopup(){
+            var overlay = document.getElementById("overlay");
+            overlay.style.display = "none";
+        }
     </script>
 
     <script>
@@ -214,6 +287,7 @@
                 height: '100%'
             });
         });
+
     </script>
 
 </body>
