--- a/testsystem/templates/testsystem/index.html
+++ b/testsystem/templates/testsystem/index.html
@@ -80,7 +80,7 @@
                 <div class="left">
                     <li style="color: dodgerblue">
                         <img src="/static/admin/simpleui-x/img/favicon.png"} style="width: 50px;left: auto">
-                        <a class="navbar-brand" href="#" style="color: dodgerblue;right: auto">在线习题测试平台</a>
+                        <a class="navbar-brand" href="#" style="color: dodgerblue;right: auto">在线试题推荐平台</a>
                     </li>
                 </div>
                 <br>
