--- a/testsystem/templates/testsystem/forgetpwd.html
+++ b/testsystem/templates/testsystem/forgetpwd.html
@@ -48,6 +48,7 @@
       {% block header %}
           <div class="header">{{ site_header }}</div>
       {% endblock %}
+    <h2 class="text-center">修改密码</h2>
     <div class="container">
             <div class="col">
                 <form class="form-login" action="/forgetpwd/" method="post">
@@ -57,17 +58,16 @@
                       <div class="alert alert-warning">{{ message }}</div>
                     {% endif %}
                     {% csrf_token %}
-                    <h3 class="text-center">修改密码</h3>
                     <div class="form-group">
-                        <label for="id_idcard">学号：</label>
+                        <label for="id_idcard">学号：</label>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                         <input type="text" name='idcard' class="form-control" id="id_idcard" placeholder="学号" autofocus required>
                     </div>
                     <div class="form-group">
-                      <label for="id_pwd">旧密码</label>
+                      <label for="id_pwd">旧密码</label>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                       <input type="password" name='pwd' class="form-control" id="id_pwd" placeholder="旧密码" autofocus required>
                     </div>
                     <div class="form-group">
-                      <label for="id_newpwd1">新密码：</label>
+                      <label for="id_newpwd1">新密码：</label>&nbsp&nbsp&nbsp
                       <input type="password" name='newpwd1' class="form-control" id="id_newpwd1" placeholder="新密码" required>
                     </div>
                     <div class="form-group">
